[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pandas_ml_utils"
dist-name = "pandas-ml-utils"
author = "KIC"
author-email = "kic@mindbusters.com"
home-page = "https://github.com/KIC/pandas_ml_utils"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License", "Development Status :: 2 - Pre-Alpha"]
requires-python = ">= 3.7"
requires = [
    "pandas",
    "cachetools",
    "sortedcontainers",
    "scikit-learn",
    "dill"
]

[tool.flit.metadata.requires-extra]
stock_prices = [
    "yfinance"
]
jupyther = [
    "vdom",
    "matplotlib",
    "seaborn"
]

