[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pandas_ml_utils"
dist-name = "pandas-ml-utils"
author = "KIC"
author-email = "vorarlberger@gmail.com"
home-page = "https://github.com/KIC/pandas_ml_utils"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License", "Development Status :: 3 - Alpha"]
requires-python = ">= 3.7"
requires = [
    "pandas",
    "cachetools",
    "sortedcontainers",
    "scikit-learn",
    "statsmodels",
    "hyperopt",
    "h5py",
    "dill"
]

[tool.flit.metadata.requires-extra]
finance = [
    "yfinance"
]
crypto = [
    "requests"
]
notebook = [
    "vdom",
    "mako",
    "matplotlib",
    "seaborn"
]
reinforcement = [
    "gym",
    "keras",
    "keras-rl"
]
development = [
    "sphinx-autodoc-typehints",
    "jupyter-sphinx",
    "shpinx"
]